# opengl-training

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  tetrahedren.cpp  triangle.cpp
